# LLM-Voice-API

./: .gitignore  README.md  alembic.ini  design.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 094bcc3a5167_add_voice_evaluations_table.py  3ebc18e4e56b_add_voice_profiles_table_with_versioning.py  9c82a719496c_initial_migration_with_voice_profile_.py
app/: __init__.py  app.py  tool.py
app/configs/: database.py  settings.py
app/helpers/: prompt_helper.py  response_schema_helper.py
app/llm/: ports.py  provider.py  stub.py
app/models/: __init__.py  brand.py  voice.py
app/models/db/: brand.py  voice_profile.py
app/routes/: __init__.py  brands.py  brands_route.py  brands_router.py  voices_route.py  voices_router.py
app/services/: brand_service.py  voice_service.py
app/tools/: scrapper_tool.py
docs/: schema.yaml
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_api_integration.py
tests/unit/: __init__.py  test_brand_service.py  test_models.py  test_scrapper_tool.py  test_stub_llm.py  test_voice_service.py
